--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<p><span style="font-family: Verdana, Geneva, sans-serif; font-size: 22px;">Hey this is Sarath</span></p>
-<p>Student of BITS Pilani&nbsp;<br>Senior Consultant, Ernst &amp; Young<br>Contact: <a href="mailto:2021mt93274@wilp.bits-pilani.ac.in">2021mt93274@wilp.bits-pilani.ac.in</a></p>
-<p><span style="font-family: Verdana, Geneva, sans-serif; font-size: 18px;">My Education Details:</span><br><span style="font-family: Verdana, Geneva, sans-serif; font-size: 16px;">Completed my Graduation in Mechanical Engineering</span></p>
-<p><span style="font-family: Verdana, Geneva, sans-serif; font-size: 18px;">Professional Experiences:</span><br>Senior Consultant, Ernst &amp; Young, (Sep-2021 to Present)<br>Senior Analyst, Accenture, (May-2020 to Sep-2021)<br>Software Engineer, Tata Consultancy Services, (July-2016 to May-2020)</p>
+Hey this is Sarath
+
+Student of BITS Pilani 
+Senior Consultant, Ernst & Young
+Contact: 2021mt93274@wilp.bits-pilani.ac.in
+
+My Education Details:
+Completed my Graduation in Mechanical Engineering
+
+Professional Experiences:
+Senior Consultant, Ernst & Young, (Sep-2021 to Present)
+Senior Analyst, Accenture, (May-2020 to Sep-2021)
+Software Engineer, Tata Consultancy Services, (July-2016 to May-2020)
