--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
-Hey this is Sarath
-
-Student of BITS Pilani 
-Senior Consultant, Ernst & Young
-Contact: 2021mt93274@wilp.bits-pilani.ac.in
-
-My Education Details:
-Completed my Graduation in Mechanical Engineering
-
-Professional Experiences:
-Senior Consultant, Ernst & Young, (Sep-2021 to Present)
-Senior Analyst, Accenture, (May-2020 to Sep-2021)
-Software Engineer, Tata Consultancy Services, (July-2016 to May-2020)
+<p><span style="font-family: Verdana, Geneva, sans-serif; font-size: 19px;">Hey this is Sarath!&nbsp;</span><br><span style='font-family: "Times New Roman", Times, serif;'>Student of BITS WILP<br>Senior Consultant, Ernst &amp; Young</span><br><span style='font-family: "Times New Roman", Times, serif;'>Contact: <a href="mailto:2021mt93274@wilp.bits-pilani.ac.in">2021mt93274@wilp.bits-pilani.ac.in</a></span></p>
+<p><span style="font-family: Verdana, Geneva, sans-serif;">My Education Details:</span></p>
+<p>Completed my Graduation in Mechanical Engineering&nbsp;</p>
+<p><span style="font-family: Verdana, Geneva, sans-serif;">Professional Experience:</span></p>
+<p>Senior Consultant, Ernst &amp; Young (Sep-2021 to Present)<br>Senior Analyst, Accenture (May-2020 to Sep-2021)<br>Software Engineer, Tata Consultancy Services (July-2016 to May-2020)</p>
+<p><br></p>
+<p><br></p>
